# Claude_Learning

./: .env.example  .gitignore  README.md  START_HERE_Windows.txt  pyproject.toml  requirements.txt  run.bat  run.py
report_analyzer/: __init__.py  ai_extract.py  cli.py  export.py  extraction.py  llm_extract.py  models.py  parsing.py  xlsx_export.py
reports/: PUT_YOUR_PDFS_HERE.txt
samples/: make_sample_report.py
tests/: test_parsing.py
